--- a/style1.css
+++ b/style1.css
@@ -15,8 +15,40 @@ body{
     min-height: 100vh;
     background: #04043a;
 }
+.container > span{
+    font-size: 5rem;
+    font-family:Verdana sans-serif;
+    color: #d400d4;
+    animation: glow 2s ease-in-out infinite;
+}
+@keyframes glow {
+    0%,100%{
+        color: #fff;
+        text-shadow: 0 0 12px lime, 0 0 50px lime, 0 0 100px lime;
+    }
+    10%, 90%{
+        color: #b39cd663;
+        text-shadow: none;
+    }
+}
+.container > span:nth-child(2){
+    animation-delay: 0.25s;
+}
+.container > span:nth-child(3){
+    animation-delay: 0.5s;
+}
+.container > span:nth-child(4){
+    animation-delay: 0.75s;
+}
+.container > span:nth-child(5){
+    animation-delay: 1s;
+}
+.container > span:nth-child(6){
+    animation-delay: 1.25s;
+}
 a{
     position: relative;
+    margin-left: 32px;
     width: 150px;
     height: 55px;
     display: inline-block;
